manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler-app-deployment
  namespace: scheduler
spec:
  selector:
    matchLabels:
      app: scheduler-app
  replicas: 1
  template:
    metadata:
      labels:
        app: scheduler-app
    spec:
      volumes:
        - name: config
          configMap:
            name: web-config
            items:
              - key: "web.properties"
                path: "config.js"
      terminationGracePeriodSeconds: 30
      containers:
        - name: scheduler-web
          image: mateusz7812/scheduler_react:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: "/usr/share/nginx/html/config.js"
              subPath: "config.js"
        - name: scheduler-server
          image: mateusz7812/scheduler_service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3003
        - name: scheduler-executor
          image: mateusz7812/scheduler_executor:latest
          imagePullPolicy: Always
        - name: zipkin-server
          image: openzipkin/zipkin
          ports:
            - containerPort: 9411
