manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-scheduler
  namespace: scheduler
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - schedulerapp.duckdns.org
    secretName: scheduler-tls-secret
  rules:
  - host: schedulerapp.duckdns.org
    http:
      paths:
      - path: /service/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: scheduler-app-service
            port:
              number: 3003
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: scheduler-app-service
            port:
              number: 80
